--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,68 @@
+apply plugin: 'maven'
+
+ 
+
 group 'at.d4m.rxrethinkdb'
+
 version '1.0-SNAPSHOT'
 
+ 
+
 buildscript {
+
     ext.kotlin_version = '1.2.10'
 
+ 
+
     repositories {
+
         mavenCentral()
+
     }
+
     dependencies {
+
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
     }
+
 }
+
+ 
 
 apply plugin: 'kotlin'
 
+ 
+
 repositories {
+
     mavenCentral()
+
 }
+
+ 
 
 dependencies {
+
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+
     compile 'io.reactivex.rxjava2:rxjava:2.1.3'
+
     compile 'com.rethinkdb:rethinkdb-driver:2.3.3'
+
 }
 
+ 
+
 compileKotlin {
+
     kotlinOptions.jvmTarget = "1.8"
+
 }
+
 compileTestKotlin {
+
     kotlinOptions.jvmTarget = "1.8"
+
 }
+
